Angular Lab - Complete Part 1

--- a/angular/angular-lab/src/app/movies/movies.component.html
+++ b/angular/angular-lab/src/app/movies/movies.component.html
@@ -1,5 +1,6 @@
+<h2>Top Ten Grossing Movies - 2019</h2>
 <ul *ngIf="movies">
-    <li *ngFor="let movie of movies">
-      <span>{{ movie.id }}</span> {{ movie.name }}
-    </li>
-  </ul>
+  <li *ngFor="let movie of movies">
+    <span>{{ movie.id }}</span> {{ movie.name }}
+  </li>
+</ul>
