--- a/angular/angular-lab/src/app/navbar/navbar.component.html
+++ b/angular/angular-lab/src/app/navbar/navbar.component.html
@@ -9,7 +9,10 @@
         <a class="nav-link" routerLink="/">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="movies">Favorite Movies</a>
+        <a class="nav-link" routerLink="friends">Coding Friends</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="movies">Top Ten Movies</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/shopping-list">Shopping List</a>
