--- a/angular/angular-lab/src/app/shopping-list/shopping-list.component.html
+++ b/angular/angular-lab/src/app/shopping-list/shopping-list.component.html
@@ -1,3 +1,4 @@
+<h2>Shopping List</h2>
 <ul *ngIf="shoppingItems">
   <li *ngFor="let item of shoppingItems">
     <span>{{ item.id }}</span> {{ item.name }}
