--- a/angular/angular-lab/src/styles.css
+++ b/angular/angular-lab/src/styles.css
@@ -8,6 +8,7 @@ h2, h3 {
   color: #444;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: lighter;
+  margin-bottom: 1.2rem;
 }
 
 body, input[type="text"], button {
