Angular Lab - Add template-based form

--- a/angular/angular-lab/src/app/friends/friends.component.html
+++ b/angular/angular-lab/src/app/friends/friends.component.html
@@ -6,3 +6,5 @@
     {{ friend.firstName }} {{ friend.lastName }}
   </li>
 </ul>
+<h2>Add a new coding friend!</h2>
+<app-person-editor-template></app-person-editor-template>
