Angular Lab - Complete reactive form

--- a/angular/angular-lab/src/app/navbar/navbar.component.html
+++ b/angular/angular-lab/src/app/navbar/navbar.component.html
@@ -12,10 +12,13 @@
         <a class="nav-link" routerLink="friends">Coding Friends</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" routerLink="profile">Profile (Reactive Form)</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" routerLink="movies">Top Ten Movies</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/shopping-list">Shopping List</a>
+        <a class="nav-link" routerLink="shopping-list">Shopping List</a>
       </li>
     </ul>
   </div>
