--- a/angular/angular-lab/src/app/home/home.component.html
+++ b/angular/angular-lab/src/app/home/home.component.html
@@ -1,2 +1,6 @@
-<h1>Welcome to Jordan's Angular Lab!</h1>
-<p class="lead">Where Angular dreams come true...</p>
+<div class="jumbotron text-center">
+  <h1>Welcome to Jordan's Angular Lab!</h1>
+  <p class="lead">Where Angular dreams come true...</p>
+</div>
+<h3 class="text-center">After reviewing this app,</h3>
+<h3 class="text-center">please visit my <a href="https://github.com/jordanmor" alt="GitHub Account Jordan Mor">GitHub account.</a></h3>
