--- a/angular/angular-lab/src/app/movies/movies.component.html
+++ b/angular/angular-lab/src/app/movies/movies.component.html
@@ -1,6 +1,10 @@
-<h2>Top Ten Grossing Movies - 2019</h2>
-<ul *ngIf="movies">
-  <li *ngFor="let movie of movies">
-    <span>{{ movie.id }}</span> {{ movie.name }}
-  </li>
-</ul>
+<div class="jumbotron text-center">
+  <h1>Top Ten Grossing Movies - 2019</h1>
+</div>
+<div class="movies">
+  <ul *ngIf="movies">
+    <li *ngFor="let movie of movies">
+      <span>{{ movie.id }}</span> {{ movie.name }}
+    </li>
+  </ul>
+</div>
