--- a/angular/angular-lab/src/app/friends/friends.component.css
+++ b/angular/angular-lab/src/app/friends/friends.component.css
@@ -31,3 +31,10 @@ li span {
   min-width: 16px;
   border-radius: 4px 0 0 4px;
 }
+
+.friends {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
