--- a/angular/angular-lab/src/app/navbar/navbar.component.html
+++ b/angular/angular-lab/src/app/navbar/navbar.component.html
@@ -1,25 +1,30 @@
 <nav class="navbar navbar-expand-md navbar-light bg-light mb-3">
-  <a class="navbar-brand" routerLink="/">Angular Lab</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" routerLink="/">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="friends">Coding Friends</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="profile">Profile (Reactive Form)</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="movies">Top Ten Movies</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="shopping-list">Shopping List</a>
-      </li>
-    </ul>
+  <div class="container">
+      <a class="navbar-brand" routerLink="/">Angular Lab</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" routerLink="/">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="friends">Coding Friends</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="profile">Profile (Reactive Form)</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="animations">Animations</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="movies">Top Ten Movies</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="shopping-list">Shopping List</a>
+          </li>
+        </ul>
+      </div>
   </div>
 </nav>
