--- a/angular/angular-lab/src/app/shopping-list/shopping-list.component.html
+++ b/angular/angular-lab/src/app/shopping-list/shopping-list.component.html
@@ -1,6 +1,10 @@
-<h2>Shopping List</h2>
-<ul *ngIf="shoppingItems">
-  <li *ngFor="let item of shoppingItems">
-    <span>{{ item.id }}</span> {{ item.name }}
-  </li>
-</ul>
+<div class="jumbotron text-center">
+  <h1>Shopping List</h1>
+</div>
+<div>
+  <ul *ngIf="shoppingItems">
+    <li *ngFor="let item of shoppingItems">
+      <span>{{ item.id }}</span> {{ item.name }}
+    </li>
+  </ul>
+</div>
