Angular Lab - Add project screenshot

--- a/angular/angular-lab/src/app/person-editor-template/person-editor-template.component.html
+++ b/angular/angular-lab/src/app/person-editor-template/person-editor-template.component.html
@@ -14,7 +14,7 @@
       [(ngModel)]="person.lastName" id="lastName" name="lastName" #lastName="ngModel" required>
     </div>
 
-    <button type="submit">Submit</button>
+    <button class="btn btn-primary" type="submit">Submit</button>
 
   </form>
 </div>
