Fix links to angular-lab

--- a/angular/angular-lab/src/app/profile-editor-reactive/profile-editor-reactive.component.html
+++ b/angular/angular-lab/src/app/profile-editor-reactive/profile-editor-reactive.component.html
@@ -4,7 +4,7 @@
       <p><em>Updated profile model data is sent in JSON format to mock server to update db (aka. console.log())</em></p>
     </div>
     <div class="profile">
-      <form [formGroup]="profileForm" (ngSubmit)="onSubmit()" class="mb-4">
+      <form [formGroup]="profileForm" class="mb-4">
         <div class="form-group">
           <label for="firstName">First Name</label>
           <input type="text" formControlName="firstName" class="form-control" id="firstName" required>
